# GeometricKernels

./: CHANGELOG.md  CITATION.bib  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: profile-hyperbolic.yaml  quality-checks.yaml
docs/: bibliography.html  genindex.html  index.html  index.rst  py-modindex.html  search.html  searchindex.js  sphinx-reading-durations.json
docs/_modules/: index.html
docs/coverage_html/: class_index.html  function_index.html  index.html  status.json  z_04f23f8ef5a3ea2f___init___py.html  z_04f23f8ef5a3ea2f_test_basics_py.html  z_04f23f8ef5a3ea2f_test_circle_py.html  z_04f23f8ef5a3ea2f_test_eigenfunctions_py.html  z_04f23f8ef5a3ea2f_test_eigenvalues_py.html  z_04f23f8ef5a3ea2f_test_graph_edges_py.html  z_04f23f8ef5a3ea2f_test_graph_py.html  z_04f23f8ef5a3ea2f_test_hamming_graph_py.html  z_04f23f8ef5a3ea2f_test_hyperbolic_py.html  z_04f23f8ef5a3ea2f_test_hypercube_graph_py.html  z_04f23f8ef5a3ea2f_test_hypersphere_py.html  z_04f23f8ef5a3ea2f_test_lie_groups_py.html  z_04f23f8ef5a3ea2f_test_mesh_py.html  z_04f23f8ef5a3ea2f_test_product_discrete_spectrum_space_py.html  z_04f23f8ef5a3ea2f_test_spd_py.html  z_06867b7475476775___init___py.html  z_06867b7475476775_extras_py.html  z_06e44dcce29f0c85___init___py.html  z_06e44dcce29f0c85_extras_py.html  z_1b91cefa446f934b___init___py.html  z_1b91cefa446f934b_base_py.html  z_1b91cefa446f934b_circle_py.html  z_1b91cefa446f934b_eigenfunctions_py.html  z_1b91cefa446f934b_graph_edges_py.html  z_1b91cefa446f934b_graph_py.html  z_1b91cefa446f934b_hamming_graph_py.html  z_1b91cefa446f934b_hyperbolic_py.html  z_1b91cefa446f934b_hypercube_graph_py.html  z_1b91cefa446f934b_hypersphere_py.html  z_1b91cefa446f934b_lie_groups_py.html  z_1b91cefa446f934b_mesh_py.html  z_1b91cefa446f934b_product_py.html  z_1b91cefa446f934b_so_py.html  z_1b91cefa446f934b_spd_py.html  z_1b91cefa446f934b_su_py.html  z_287b0ae7c4c561bd___init___py.html  (+56 more)
docs/examples/: CustomSpacesAndKernels.html  Graph.html  Graph.ipynb  GraphEdges.html  HammingGraph.html  HammingGraph.ipynb  Hyperbolic.html  HypercubeGraph.html  Hypersphere.html  Mesh.html  SPD.html  SpecialOrthogonal.html  SpecialUnitary.html  Torus.html  examples.html  index.html  introduction.html
docs/theory/: addition_theorem.html  compact.html  feature_maps.html  graphs.html  hamming_graph.html  hypercube_graph.html  index.html  meshes.html  product_kernels.html  symmetric.html  (+1 more)
geometric_kernels/: jax.py
notebooks/: GraphEdges.ipynb  Hyperbolic.ipynb  HypercubeGraph.ipynb  Hypersphere.ipynb  Mesh.ipynb  SPD.ipynb  SpecialOrthogonal.ipynb  SpecialUnitary.ipynb  Torus.ipynb
scripts/: profile_hyperbolic_node.py  summarize_pstats.py
(+110 files in other folders)
