[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "geometric_kernels"
authors = [
    {name = "The GeometricKernels Contributors", email = "geometric-kernels@googlegroups.com"},
]
description="A Python Package offering geometric kernels in NumPy, TensorFlow, PyTorch, and Jax."
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords=[
    "geometric-kernels",
]
requires-python = ">=3.10"
dependencies = [
    "backends>=1.8.0",
    "einops",
    "geomstats",
    "numpy>=2.0,<2.4",   # constraining from above due to geomstats==2.8.0 incompatibility
    "opt-einsum",
    "plum-dispatch>=2.6.0",
    "potpourri3d",
    "robust_laplacian",
    "scipy>=1.3",
    "spherical-harmonics-basis",
    "sympy~=1.13",
]
version="0.4.2"

[project.urls]
Documentation = "https://geometric-kernels.github.io/"
Source = "https://github.com/geometric-kernels/GeometricKernels"

[tool.isort]
profile = "black"
skip_glob = [
    "geometric_kernels/__init__.py",
]
known_third_party = [
    "lab",
]

[tool.mypy]
ignore_missing_imports = true
strict_optional = false
allow_redefinition = true


[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']


[tool.uv]
default-groups = []

[dependency-groups]
dev = [
  # --- shared from test_requirements.txt ---
  "ipykernel",
  "backends>=1.8.0",
  "plotly",
  "kaleido",
  "black==24.3.0",
  "flake8==7.0.0",
  "isort==5.13.2",
  "autoflake",
  "pytest",
  "pytest-cov",
  "nbmake",
  "mypy",
  "scikit-learn",
  "geoopt",
  'scipy',
  "pandas>=2.2.3",

  # typing-extensions only required on newer pins in 3.10/3.11 files
  'typing_extensions>=4.6; python_version >= "3.10" and python_version < "3.12"',

  # Torch
  "torch",

  # gpytorch
  'gpytorch',
  "botorch>=0.9",

  # TensorFlow / GPflow / TFP split
  'tensorflow',
  'tensorflow-probability; python_version < "3.12"',
  'tensorflow-probability>=0.25; python_version >= "3.12"',
  'gpflow',
  'tf_keras',

  # JAX family
  'jax',
  'jaxlib',
  'jaxtyping',
  'optax',
  'gpjax>=0.12.2',
  'orbax-checkpoint==0.11.32; platform_system == "Windows"',   # newer version depends on uvloop, unavailable in windows
  'pywin32-ctypes; platform_system == "Windows"',  # marker probe for CI: should install only on Windows
]
